2004-08-26  JP Rosevear  <jpr@novell.com>

	* modulesets/gnome28.modules: update soup branch

2004-08-24  Calum Benson  <calum.benson@sun.com>

	* modulesets/gnome28.modules:

	Build gnome-2-8 branch of gcalctool (which doesn't have
	the new operator precedence features).

2004-08-19  Tuomas Kuosmanen  <tigert@novell.com>

	* README (command): Added mention about gnu-arch requirement to  
	help users like me! :) with the wtf?-syndrome when jhbuild wouldnt
	work at all unless "tla" (gnu-arch) is installed.. Feel free to
	edit better, sorry to commit without your knowledge, but I couldnt
	find you online and this seemed like an acute issue.

2004-08-17  James Henstridge  <james@jamesh.id.au>

	Based on patch on bug 145393 by Thomas Fitzsimmons:

	* jhbuild/config.py (prependpath): function to store path values
	that will be prepended to various environment variables after
	jhbuild has prepended its values.
	(Config.setup_env): process the prepend values.

2004-08-17  Christophe Fergeau  <teuf@gnome.org>

	* modulesets/gnome26.modules:
	* modulesets/gnome28.modules: use latest gnutls and opencdk versions

2004-08-11  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome28.modules (gnome-volume-manager): add
	gnome-volume-manager.  Patch from Darren Adams
	<darrenadams@dsl.pipex.com> in bug #149067.

	* jhbuild/frontends/tinderbox.py
	(TinderboxBuildScript.start_module): sanitize the module name for
	use as a filename.  Patch from Olav Vitters
	<bugzilla-gnome@bkor.dhs.org> in bug #148959.

	* modulesets/bootstrap.modules (libtool): update to 1.5.8
	(automake-1.9): add package.

2004-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* modulesets/gnome24.modules:
	* modulesets/gnome26.modules:
	* modulesets/gnome28.modules:
	  remove disable-plugin-builddir from gst-plugins

2004-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* jhbuild/frontends/buildscript.py:
	  create prefix and checkoutdir if they don't exist yet
