@@ -1,3 +1,9 @@
+2004-08-29  Manish Singh  <yosh@gimp.org>
+
+	* jhbuild/utils/arch.py
+	* jhbuild/utils/cvs.py
+	* jhbuild/utils/svn.py: fix a few ytpos and cut'n'paste thinkos.
+
 2004-08-26  JP Rosevear  <jpr@novell.com>
 
 	* modulesets/gnome28.modules: update soup branch
